--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,10 @@ ENV/
 env.bak/
 venv.bak/
 
+# Credential files
+credentials.json
+token.json
+
 # Spyder project settings
 .spyderproject
 .spyproject
